Atualização da geração de gráficos, com geração com título e sem títulos e geração de gráficos resumos.